--- a/P3_TV_Script_Generation/dlnd_tv_script_generation.html
+++ b/P3_TV_Script_Generation/dlnd_tv_script_generation.html
@@ -12435,7 +12435,7 @@ Default GPU Device: /gpu:0
 <span class="sd">    :return: Tuple (Logits, FinalState)</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="c1"># TODO: Implement Function</span>
-    <span class="n">embeddings</span> <span class="o">=</span> <span class="n">get_embed</span><span class="p">(</span><span class="n">input_data</span><span class="p">,</span> <span class="n">vocab_size</span><span class="p">,</span> <span class="n">rnn_size</span><span class="p">)</span>
+    <span class="n">embeddings</span> <span class="o">=</span> <span class="n">get_embed</span><span class="p">(</span><span class="n">input_data</span><span class="p">,</span> <span class="n">vocab_size</span><span class="p">,</span> <span class="n">embed_dim</span><span class="p">)</span>
     <span class="n">outputs</span><span class="p">,</span> <span class="n">final_state</span> <span class="o">=</span> <span class="n">build_rnn</span><span class="p">(</span><span class="n">cell</span><span class="p">,</span> <span class="n">embeddings</span><span class="p">)</span>
     <span class="c1"># initialize weights and biases so that the netword converge</span>
     <span class="n">weights</span> <span class="o">=</span> <span class="n">tf</span><span class="o">.</span><span class="n">truncated_normal_initializer</span><span class="p">(</span><span class="n">stddev</span> <span class="o">=</span> <span class="mf">0.01</span><span class="p">)</span>
@@ -12595,17 +12595,17 @@ Default GPU Device: /gpu:0
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[14]:</div>
+<div class="prompt input_prompt">In&nbsp;[25]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Number of Epochs</span>
-<span class="n">num_epochs</span> <span class="o">=</span> <span class="mi">100</span>
+<span class="n">num_epochs</span> <span class="o">=</span> <span class="mi">200</span>
 <span class="c1"># Batch Size</span>
 <span class="n">batch_size</span> <span class="o">=</span> <span class="mi">512</span>
 <span class="c1"># RNN Size</span>
-<span class="n">rnn_size</span> <span class="o">=</span> <span class="mi">1024</span>
+<span class="n">rnn_size</span> <span class="o">=</span> <span class="mi">512</span>
 <span class="c1"># Embedding Dimension Size</span>
-<span class="n">embed_dim</span> <span class="o">=</span> <span class="kc">None</span>
+<span class="n">embed_dim</span> <span class="o">=</span> <span class="mi">512</span>
 <span class="c1"># Sequence Length</span>
 <span class="n">seq_length</span> <span class="o">=</span> <span class="mi">15</span>
 <span class="c1"># Learning Rate</span>
@@ -12636,7 +12636,7 @@ Default GPU Device: /gpu:0
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[15]:</div>
+<div class="prompt input_prompt">In&nbsp;[26]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12687,7 +12687,7 @@ Default GPU Device: /gpu:0
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[16]:</div>
+<div class="prompt input_prompt">In&nbsp;[27]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12736,21 +12736,37 @@ Default GPU Device: /gpu:0
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Epoch   0 Batch    0/8   train_loss = 8.822
-Epoch   6 Batch    2/8   train_loss = 5.698
-Epoch  12 Batch    4/8   train_loss = 4.643
-Epoch  18 Batch    6/8   train_loss = 3.788
-Epoch  25 Batch    0/8   train_loss = 3.220
-Epoch  31 Batch    2/8   train_loss = 2.896
-Epoch  37 Batch    4/8   train_loss = 1.960
-Epoch  43 Batch    6/8   train_loss = 1.792
-Epoch  50 Batch    0/8   train_loss = 1.105
-Epoch  56 Batch    2/8   train_loss = 0.971
-Epoch  62 Batch    4/8   train_loss = 0.504
-Epoch  68 Batch    6/8   train_loss = 0.304
-Epoch  75 Batch    0/8   train_loss = 0.266
-Epoch  81 Batch    2/8   train_loss = 0.225
-Epoch  87 Batch    4/8   train_loss = 0.204
-Epoch  93 Batch    6/8   train_loss = 0.206
+Epoch   6 Batch    2/8   train_loss = 5.965
+Epoch  12 Batch    4/8   train_loss = 5.275
+Epoch  18 Batch    6/8   train_loss = 4.365
+Epoch  25 Batch    0/8   train_loss = 3.910
+Epoch  31 Batch    2/8   train_loss = 3.367
+Epoch  37 Batch    4/8   train_loss = 3.068
+Epoch  43 Batch    6/8   train_loss = 2.581
+Epoch  50 Batch    0/8   train_loss = 2.251
+Epoch  56 Batch    2/8   train_loss = 1.928
+Epoch  62 Batch    4/8   train_loss = 1.648
+Epoch  68 Batch    6/8   train_loss = 1.423
+Epoch  75 Batch    0/8   train_loss = 1.389
+Epoch  81 Batch    2/8   train_loss = 1.069
+Epoch  87 Batch    4/8   train_loss = 1.209
+Epoch  93 Batch    6/8   train_loss = 0.897
+Epoch 100 Batch    0/8   train_loss = 0.870
+Epoch 106 Batch    2/8   train_loss = 0.581
+Epoch 112 Batch    4/8   train_loss = 0.502
+Epoch 118 Batch    6/8   train_loss = 0.463
+Epoch 125 Batch    0/8   train_loss = 0.491
+Epoch 131 Batch    2/8   train_loss = 0.379
+Epoch 137 Batch    4/8   train_loss = 0.356
+Epoch 143 Batch    6/8   train_loss = 0.295
+Epoch 150 Batch    0/8   train_loss = 0.297
+Epoch 156 Batch    2/8   train_loss = 0.256
+Epoch 162 Batch    4/8   train_loss = 0.233
+Epoch 168 Batch    6/8   train_loss = 0.236
+Epoch 175 Batch    0/8   train_loss = 0.245
+Epoch 181 Batch    2/8   train_loss = 0.222
+Epoch 187 Batch    4/8   train_loss = 0.207
+Epoch 193 Batch    6/8   train_loss = 0.213
 Model Trained and Saved
 </pre>
 </div>
@@ -12772,7 +12788,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[17]:</div>
+<div class="prompt input_prompt">In&nbsp;[28]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12798,7 +12814,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[18]:</div>
+<div class="prompt input_prompt">In&nbsp;[29]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="sd">&quot;&quot;&quot;</span>
@@ -12837,7 +12853,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[19]:</div>
+<div class="prompt input_prompt">In&nbsp;[30]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">get_tensors</span><span class="p">(</span><span class="n">loaded_graph</span><span class="p">):</span>
@@ -12893,7 +12909,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[20]:</div>
+<div class="prompt input_prompt">In&nbsp;[31]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">pick_word</span><span class="p">(</span><span class="n">probabilities</span><span class="p">,</span> <span class="n">int_to_vocab</span><span class="p">):</span>
@@ -12948,7 +12964,7 @@ Model Trained and Saved
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[21]:</div>
+<div class="prompt input_prompt">In&nbsp;[32]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">gen_length</span> <span class="o">=</span> <span class="mi">200</span>
@@ -13009,22 +13025,22 @@ Model Trained and Saved
 <div class="prompt"></div>
 
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>moe_szyslak: yeah, i know, i know. but the bad news is we gotta get! it&#39;s a pussycat. but was why uh, and with the kids?
-lenny_leonard:(sighs)
-homer_simpson: mmm guys, because there&#39;s good one, but, i&#39;m too late.
-marge_simpson: homer, i&#39;m polish.(moans)
-moe_szyslak: here, homer it on?
-moe_szyslak:(to moe, a dead. he&#39;s never stops agent, i gotta be kiddin&#39; in a&#34; old rummy&#34;
-crowd: do when we can get with a times!
-carl_carlson: i mean you did of my beautiful, some guy a&#34; saint times?(big head)&#34;
-moe_szyslak: this guy a party about me, you i get one of a shred of government &#39;cause he gave?
-moe_szyslak: watch, do.
+<pre>moe_szyslak: aw, the little cutie wants to learn something no / she has an operation, krusty. but stories, my least what, as the guy that&#39;s me?
+announcer:(excited) oh, i&#39;m can&#39;t picture in the bar?
+moe_szyslak: better we call.
 
 
-moe_szyslak: my sad! my militia, f-l-a-n-r-d-s, yeah, my car.
-marge_simpson: i did. woo god, i ain&#39;t never okay?
-homer_simpson:(finishing sings) full-bodied...
-moe_szyslak:(clears throat
+moe_szyslak: no. i got the cash value at the last idea of my ancestors and my best friend: winnings.
+moe_szyslak: oh, moe! thank god...(to moe) hey, wait a minute. don&#39;t think i should hear now.
+
+
+lenny_leonard: hurry,, i&#39;d realize you...
+moe_szyslak: okay... the world&#39;s amazing.
+homer_simpson: this detective is unbelievable. he has the soul of you.
+moe_szyslak: he&#39;s not like that&#34; the place, moe. and you says moe. you&#39;re here, didn&#39;t you bring you to make me-- i&#39;m just gonna take the guts!
+moe_szyslak: uh, go to the car.
+homer_simpson: that&#39;s right, i got your restroom to change for dinner.
+homer_simpson:
 </pre>
 </div>
 </div>
